--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "axios": "^1.7.2",
     "izitoast": "^1.4.0",
     "modern-normalize": "^2.0.0",
     "simplelightbox": "^2.14.3",
