--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "axios": "^1.7.2",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "izitoast": "^1.4.0",
     "modern-normalize": "^2.0.0",
     "simplelightbox": "^2.14.3",
